# servant-miso-client

./: CHANGELOG.md  README.md  cabal.project  servant-miso-client.cabal
.github/workflows/: main.yml
app/: Main.hs
src/Servant/Miso/: Client.hs
